objects/Survey_Appeal__c.object
<CustomObject>
    <fields>
        <fullName>Overall_Satisfaction__c</fullName>
        <label>Overall Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VSAT</fullName>
                </value>
                <value>
                    <fullName>SAT</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>DSAT</fullName>
                </value>
                <value>
                    <fullName>VDSAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_CSC_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PC/CSC Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Appeal_RCA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_CSC_Team_RCA_Form__c</fullName>
        <label>PC/CSC Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RCA_Conducted_by_Team__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CSN - Phone</fullName>
                </value>
                <value>
                    <fullName>CSN - Planner</fullName>
                </value>
                <value>
                    <fullName>CSN - Supplier</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>eMarketing</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>RFP Builder</fullName>
                </value>
                <value>
                    <fullName>SignUp4</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Event Builder</fullName>
                </value>
                <value>
                    <fullName>OnArrival</fullName>
                </value>
                <value>
                    <fullName>Creative</fullName>
                </value>
                <value>
                    <fullName>Support Ops</fullName>
                </value>
                <value>
                    <fullName>TPP</fullName>
                </value>
                <value>
                    <fullName>Alliance Tech</fullName>
                </value>
                <value>
                    <fullName>PSC</fullName>
                </value>
                <value>
                    <fullName>Event Enterprise</fullName>
                </value>
                <value>
                    <fullName>HTML Enterprise</fullName>
                </value>
                <value>
                    <fullName>Passkey</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
                <value>
                    <fullName>EMI/Speed RFP</fullName>
                </value>
                <value>
                    <fullName>Enterprise Events Client Services</fullName>
                </value>
                <value>
                    <fullName>Attendee Support</fullName>
                </value>
                <value>
                    <fullName>Registrant Support</fullName>
                </value>
                <value>
                    <fullName>Abstract</fullName>
                </value>
                <value>
                    <fullName>Appointments</fullName>
                </value>
                <value>
                    <fullName>Flex</fullName>
                </value>
                <value>
                    <fullName>Express</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Scale: 1 - 5 (5 Being most severe). You will pick 5 only if client is threatening a law suite or cancellation of business.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_change_Comments__c</fullName>
        <label>Process change-Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_change__c</fullName>
        <label>Process change</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Complexity__c</fullName>
        <label>Project Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-Simple</fullName>
                </value>
                <value>
                    <fullName>2-Medium</fullName>
                </value>
                <value>
                    <fullName>3-Advanced</fullName>
                </value>
                <value>
                    <fullName>4-Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_Conducted_by_Team__c</fullName>
        <label>RCA Conducted by Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Transient</fullName>
                </value>
                <value>
                    <fullName>Creative Services</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>EMarketing</fullName>
                </value>
                <value>
                    <fullName>Escalation Desk</fullName>
                </value>
                <value>
                    <fullName>EventBuilder</fullName>
                </value>
                <value>
                    <fullName>Event Phone</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>OA360 PC</fullName>
                </value>
                <value>
                    <fullName>Platform Support</fullName>
                </value>
                <value>
                    <fullName>Quickmobile</fullName>
                </value>
                <value>
                    <fullName>Social Tables</fullName>
                </value>
                <value>
                    <fullName>Wedding Spot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_Status__c</fullName>
        <label>RCA Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RCA_Conducted_by_Team__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Challenged for Review</fullName>
                </value>
                <value>
                    <fullName>Review Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_Type__c</fullName>
        <label>RCA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Internal Teams Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Challenge__c</fullName>
        <label>Reason for Challenge</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rep_Status__c</fullName>
        <label>Rep Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RCA_Conducted_by_Team__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Extended Mentoring</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Early Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Agent_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested Agent Change</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Appeal1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Product_Change__c</fullName>
        <label>Requested Product Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Creative Services</fullName>
                    <label>Creative</label>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>eMarketing</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Event Builder</fullName>
                </value>
                <value>
                    <fullName>Groups</fullName>
                </value>
                <value>
                    <fullName>Hospitality Cloud</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
                <value>
                    <fullName>OnArrival</fullName>
                </value>
                <value>
                    <fullName>Passkey</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
                <value>
                    <fullName>Travel/Transient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Score_Change__c</fullName>
        <label>Requested Score Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neither Satisfied nor Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Training_Class_Change__c</fullName>
        <label>Requested Training Class Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requestor_Comments__c</fullName>
        <label>Requestor Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <formula>HYPERLINK("https://cvent.my.salesforce.com/"&amp;Survey_Information__c,"Survey Information Link")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Support_cost__c</fullName>
        <label>Sales Support cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Severity_Level__c</fullName>
        <label>Severity Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Share_with_Floor__c</fullName>
        <label>Share with Floor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RCA_Conducted_by_Team__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>working</fullName>
                </value>
                <value>
                    <fullName>In review</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggested_Plan_of_Action__c</fullName>
        <label>Suggested Plan of Action</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <formula>Survey_Information__r.Survey_Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Respondent Name</label>
        <referenceTo>Survey_Q__c</referenceTo>
        <relationshipName>Survey_Appeal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transactional</fullName>
                </value>
                <value>
                    <fullName>Experiential</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Response__c</fullName>
        <formula>IF( NOT(ISBLANK(Survey_Information__r.Case__c)), Survey_Information__r.Case__r.CaseNumber , 

IF( NOT(ISBLANK(Survey_Information__r.Onboarding__c )),Survey_Information__r.Onboarding__r.Name , 

IF( NOT(ISBLANK(Survey_Information__r.MobileApp__c )),  Survey_Information__r.MobileApp__r.Name,"" 

) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Response #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>eMarketing</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Hospitality Cloud</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>Learning &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Creative Services</fullName>
                </value>
                <value>
                    <fullName>Event Builder</fullName>
                </value>
                <value>
                    <fullName>SignUp4</fullName>
                </value>
                <value>
                    <fullName>Alliance Tech by Cvent</fullName>
                </value>
                <value>
                    <fullName>Passkey</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
                <value>
                    <fullName>Business Transient</fullName>
                </value>
                <value>
                    <fullName>Groups</fullName>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
                <value>
                    <fullName>Support Operations</fullName>
                </value>
                <value>
                    <fullName>Social Tables</fullName>
                </value>
                <value>
                    <fullName>QuickMobile</fullName>
                </value>
                <value>
                    <fullName>Wedding Spot</fullName>
                </value>
                <value>
                    <fullName>Onsite Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <label>Tenure</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RCA_Conducted_by_Team__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Below 1 Month</fullName>
                </value>
                <value>
                    <fullName>1 - 3 Months</fullName>
                </value>
                <value>
                    <fullName>3 - 6 Months</fullName>
                </value>
                <value>
                    <fullName>6 - 9 Months</fullName>
                </value>
                <value>
                    <fullName>9 - 12 Months</fullName>
                </value>
                <value>
                    <fullName>1 to 2 Years</fullName>
                </value>
                <value>
                    <fullName>2 to 3 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years and Above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_CS_Support_Cost__c</fullName>
        <label>Total CS Support Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12_Month_Spend__c</fullName>
        <formula>Account_Name__r.Last_12_month_spent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>12 Month Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_CS_support_cost__c</fullName>
        <label>% of CS support cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Queue_cases__c</fullName>
        <label># of Queue cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Sales_Hours__c</fullName>
        <label># of Sales Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Sales_Support__c</fullName>
        <label>% of Sales Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>spent_Queue_Cases__c</fullName>
        <label>$ spent Queue Cases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Survey Appeal/RCA</label>
    <nameField>
        <label>Survey Appeal Name/RCA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Appeal/RCA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <recordTypes>
        <fullName>CART</fullName>
        <active>true</active>
        <label>CART</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCA</fullName>
        <active>true</active>
        <label>RCA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey_Appeal</fullName>
        <active>true</active>
        <label>Survey Appeal</label>
    </recordTypes>
    <validationRules>
        <fullName>CSAT_Score_and_Satisfaction_Update</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordTypeId = '0121N0000019Azp', 
NOT(ISPICKVAL(RCA_Type__c,"Escalation")), 
OR(ISPICKVAL(Overall_Satisfaction__c,""), 
ISPICKVAL(Original_CSAT_Score__c,"")))</errorConditionFormula>
        <errorMessage>Please update Overall Satisfaction and Original CSAT Score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Can_only_be_modified_by_L1_Approver</fullName>
        <active>true</active>
        <errorConditionFormula>AND($User.Username&lt;&gt; Level_1_Approver__r.Username, 
$User.User_18_digit_id__c &lt;&gt; '00500000006s5yrAAA', $User.User_18_digit_id__c &lt;&gt;'00500000007LOIrAAO',
OR(
ISCHANGED(Level_1_Approver_Comments__c),
ISCHANGED(Level_1_Approver_Status__c)
)
)</errorConditionFormula>
        <errorMessage>You are not authorized to change the status/add comments for Level 1 Approver.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Current_User_can_change_L2_status</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 

Not(OR( 
$User.Email= L2_Approver_Email__c, 
$User.User_18_digit_id__c ='00500000007LOIrAAO', 
$User.User_18_digit_id__c ='00500000006s5yrAAA',
$User.User_18_digit_id__c ='005o0000003GSfJAAW'
 
)), 


OR(
ISCHANGED(Level_2_Approval_Status__c),
ISCHANGED(Level_2_Approver_Comments__c)
),


NOT(CONTAINS( $User.Username ,"deployment"))


)</errorConditionFormula>
        <errorMessage>You are not authorized to change the status/add comments for Level 2 Approver.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Current_User_can_change_L3_status</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 

Not(OR( 
$User.Email= Level_3_Approver_email__c, 
$User.User_18_digit_id__c ='00500000007LOIrAAO', 
$User.User_18_digit_id__c ='00500000006s5yrAAA' 
)), 

OR(
ISCHANGED(L3_Approver_Status__c),
ISCHANGED(Level_3_Approver_Comments__c)
))</errorConditionFormula>
        <errorMessage>You are not authorized to change the status/add comments for Level 3 Approver.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Complexity_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT(ISBLANK(EB_SB_Project__c)),
ISPICKVAL( Project_Complexity__c,""),
 RecordTypeId ='0121N0000019Azp' /*RCA*/


)</errorConditionFormula>
        <errorMessage>Please enter Project Complexity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RCA_Crowd_Compass_Category</fullName>
        <active>true</active>
        <description>#11980676</description>
        <errorConditionFormula>AND(
 RecordType.DeveloperName = "RCA",
  ISPICKVAL(RCA_Conducted_by_Team__c ,"CrowdCompass"),
  ISBLANK( TEXT(Bucket_Issue_Category_for_CrowdCompass__c) ),
  ISBLANK( TEXT(Level_1_Analysis__c ) ),
  ISBLANK( TEXT(Level_2_Analysis__c ) ),
  

  $User.Username != "deploymentuser@cvent.com" 
)</errorConditionFormula>
        <errorDisplayField>Bucket_Issue_Category_for_CrowdCompass__c</errorDisplayField>
        <errorMessage>Please enter value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RCA_Event_Builder_Bucket_Level</fullName>
        <active>true</active>
        <description>#12013363</description>
        <errorConditionFormula>AND(
 ISPICKVAL(RCA_Conducted_by_Team__c ,"EventBuilder"),
  RecordType.DeveloperName = "RCA",
  ISBLANK(TEXT(Bucket_Issue_Category_for_CrowdCompass__c)),
  ISBLANK(TEXT(Level_1_Analysis__c )),
  ISBLANK(TEXT(Level_2_Analysis__c )),
  NOT(CONTAINS($User.Username , "deployment")) 
)</errorConditionFormula>
        <errorMessage>Please enter values in Bucket Issue Category (Analysis),Level 1 Analysis,Level 2 Analysis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RCA_status_Challenge_for_review</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(  RCA_Status__c  , "Challenged for Review")  &amp;&amp; 
 ISBLANK(  Reason_for_Challenge__c  )</errorConditionFormula>
        <errorDisplayField>Reason_for_Challenge__c</errorDisplayField>
        <errorMessage>Please enter the Reason for Challenge.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requested_Agent_Change_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(
INCLUDES(Appeal_Category__c, "Agent Change"),
INCLUDES(Appeal_Category__c, "Attribute to Process")
),
ISBLANK( Requested_Agent_Change__c ) 
)</errorConditionFormula>
        <errorMessage>Requested Agent Change is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requested_Product_change_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 INCLUDES(Appeal_Category__c, "Product Change"),
 ISPICKVAL(Requested_Product_Change__c ,"")
)</errorConditionFormula>
        <errorMessage>Requested Product change is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requested_Score_Change_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 INCLUDES(Appeal_Category__c, "Score Change"),
 ISPICKVAL(Requested_Score_Change__c ,"")
)</errorConditionFormula>
        <errorMessage>Requested Score Change is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requested_Training_Class_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
INCLUDES(Appeal_Category__c, "Training Class Change"), 
 ISBLANK(Requested_Training_Class_Change__c )  
)</errorConditionFormula>
        <errorMessage>Requested Training Class is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Share_with_Floor</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Share_with_Floor__c , "Yes")  &amp;&amp; 
 ISBLANK( Content_of_details_shared_with_floor__c )</errorConditionFormula>
        <errorDisplayField>Content_of_details_shared_with_floor__c</errorDisplayField>
        <errorMessage>Please enter the details to be shared with the floor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Val_Process_Change</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL( Process_change__c,"Yes"), ISBLANK(Process_change_Comments__c),FALSE)</errorConditionFormula>
        <errorDisplayField>Process_change_Comments__c</errorDisplayField>
        <errorMessage>Please enter comments for Process Change.</errorMessage>
    </validationRules>
</CustomObject>